0.0.7
 - fix: allow resuming when upload fails (#3)
 - fix: start even if DCOR is down
 - fix: do not display mean upload rate during upload
 - enh: functionalize action buttons in upload
 - enh: increase verbosity of CKANAPI
 - enh: implement resource compression (#6)
 - ref: move connectivity check and user database update to separate
   background threads
 - ref: store traceback of failed upload in job info
0.0.6
 - enh: allow to create the circle if it does not exist during dataset
   creation
 - fix: set "state" to "active" in dictionary returned by `create_dataset`
 - fix: catch error when user uses `CKANAPI.get` when he should use
   `CKANAPI.post`
0.0.5
 - basic upload functional
0.0.4
 - initial ci release test